# triangularization

./: 2.1.basic_lighting.fs  2.1.point.fs  2.1.point.gs  2.1.point.vs  CMakeLists.txt  basic_lighting_diffuse.cpp  glad.c  tunel.h
